Fixed image paths

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Triangle Card -->
         <div class="card card-compact bg-base-100 m-2 p-3 shadow-xl">
             <figure>
-                <img src="/images/triangle.png" alt="triangle" />
+                <img src="images/triangle.png" alt="triangle" />
             </figure>
             <div class="card-body items-center">
                 <h2 class="card-title">Triangle</h2>
@@ -125,10 +125,12 @@
     </div> -->
  
 <!-- Area Calculation -->
-<div id="area-calculation" class="w-96 lg:w-full sm:h-96 h-1/5 border-2 border-green-500 rounded-md p-5">
-    <h3 class="text-lg font-bold mb-4">Area Calculation</h3>
-    <p id="calculation-result" class="text-gray-700">No calculation yet. Enter values and click "Calculate" on a shape
-        card.</p>
+<div id="area-calculation">
+    <div class="w-96 lg:w-full sm:h-96 h-1/5 p-5">
+        <h3 class="text-lg font-bold mb-4">Area Calculation</h3>
+        <p id="calculation-result" class="text-gray-700">No calculation yet. Enter values and click "Calculate" on a shape
+            card.</p>
+    </div>
 </div>
 
 </div>
