added image url

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
         <!-- Rectangle -->
         <div class="card card-compact bg-base-100 m-2 p-3 shadow-xl">
-            <figure>
-                <img src="/images/rectangle.png" alt="Rectangle" />
+            <figure class="items-center justify-center">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPTrn6m5qNQz4sGXQpE7gq3YQAnoSXT0pGCg&s" alt="Rectangle" />
             </figure>
             <div class="card-body items-center">
                 <h2 class="card-title">Rectangle</h2>
